[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,8 +1,12 @@
 <html>
   <head>
-    <title> Article-One </title>
+    <title> Article One - Bhavana Malepaty </title>
   </head>
   <body>
     <h1>Article-One</h1>
+    <div>
+        <a href="/">Home</a>
+    </div>
+    <hr>
   </body>
 </html>
