--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> Article One - Bhavana Malepaty </title>
-    <meta name="viewport" content="width-device-width, initial-scale-1" />
+    <!-- <meta name="viewport" content="width-device-width, initial-scale-1" /> -->
   </head>
   <body>
     <h1>Article-One</h1>
