--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,9 @@
             margin: 0 auto;
             color: grey;
             font-family:sans-serif;
-            align: center;
+            padding-top: 60px;
+            padding-left: 20px;
+            padding-right: 20px;
         }
     </style>
   </head>
