--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <div>
+    <div class="container">
         <h1>Article-Three</h1>
         <div>
             <a href="/">Home</a>
