--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div class="center text-big bold" id = 'main-text'>
             Hi! I am Bhavana, and this is my first Webapp.
 		<h4>New heading</h4>
 		I'v made some local changes.
