--- a/ui/index.html
+++ b/ui/index.html
@@ -4,17 +4,18 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id = 'madi' src="https://pbs.twimg.com/profile_images/725899851544690688/TqDPQSNy_400x400.jpg" class="img-medium"/>
+        <div class='container'>
+            <div class="center">
+                <img id = 'madi' src="https://pbs.twimg.com/profile_images/725899851544690688/TqDPQSNy_400x400.jpg" class="img-medium"/>
+            </div>
+            <br>
+            <div class="center text-big bold" id = 'main-text'>
+                Hi! I am Bhavana, and this is my first Webapp.
+    		    <h4>New heading</h4>
+    		    I'v made some local changes.
+            </div>
+            <script> alert("Hi I\'m Javascript"); </script>
+            <script type="text/javascript" src="/ui/main.js"></script>
         </div>
-        <br>
-        <div class="center text-big bold" id = 'main-text'>
-            Hi! I am Bhavana, and this is my first Webapp.
-		<h4>New heading</h4>
-		I'v made some local changes.
-        </div>
-        <script> alert("Hi I\'m Javascript"); </script>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
     </body>
 </html>
