[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,21 @@
             <div class="center">
                 <img id = 'madi' src="https://pbs.twimg.com/profile_images/725899851544690688/TqDPQSNy_400x400.jpg" class="img-medium"/>
             </div>
+            <hr>
             <br>
+            <h3>Personal</h3>
+            <div>
+                My name is Bhavana Malepaty
+            </div>
+            <hr>
+            <h3>Professional</h3>
+            <div>
+                Student at PES University
+            </div>
+            <hr>
+            <div class = 'footer'>
+                
+            </div>
             <div class="center text-big bold" id = 'main-text'>
                 Hi! I am Bhavana, and this is my first Webapp.
     		    <h4>New heading</h4>
