--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
                 <br>
                 <hr>
                 <input type="text" id="name" placeholder="name"> 
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" id="submit_btn">
                 <ul>
                     <li>Name 1</li>
                     <li>Name 2</li>
