--- a/ui/index.html
+++ b/ui/index.html
@@ -25,7 +25,7 @@
                 <hr>
                 <input type="text" id="name" placeholder="name"> 
                 <input type="submit" value="Submit" id="submit_btn">
-                <ul>
+                <ul id="nameList">
                     <li>Name 1</li>
                     <li>Name 2</li>
                     <li>Name 3</li>
