--- a/ui/index.html
+++ b/ui/index.html
@@ -26,9 +26,9 @@
                 <input type="text" id="name" placeholder="name"> 
                 <input type="submit" value="Submit" id="submit_btn">
                 <ul id="nameList">
-                    <li>Name 1</li>
-                    <li>Name 2</li>
-                    <li>Name 3</li>
+                    //<li>Name 1</li>
+                    //<li>Name 2</li>
+                    //<li>Name 3</li>
                 </ul>
                 
                 
